<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (c) 2015-2017 by k3b.
 *
 * This file is part of AndroFotoFinder / #APhotoManager.
 *
 * This program is free software: you can redistribute it and/or modify it
 * under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 * FOR A PARTICULAR PURPOSE. See the GNU General Public License
 * for more details.
 *
 * You should have received a copy of the GNU General Public License along with
 * this program. If not, see <http://www.gnu.org/licenses/>
 */
 -->
<!-- menue of gallery activity/fragment common for non multiselection mode and for multiselection mode with disabled selected-only -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".GalleryActivity">

    <item android:id="@+id/cmd_select_folder"
        android:title="@string/folder_menu_title"
        android:icon="@drawable/ic_action_holo_dark_folder"
        android:visible="true"
        android:orderInCategory="2"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/cmd_select_lat_lon"
        android:title="@string/area_menu_title"
        android:icon="@android:drawable/ic_dialog_map"
        android:visible="true"
        android:orderInCategory="2"
        android:showAsAction="ifRoom" />


    <item android:id="@+id/cmd_select_tag"
        android:title="@string/tags_activity_title"
        android:icon="@drawable/ic_action_tag"
        android:visible="true"
        android:orderInCategory="2"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/cmd_selection_add_all"
        android:title="@string/selection_add_all_menu_title"
        android:visible="true"
        android:orderInCategory="70"
        android:showAsAction="never" />
    <item android:id="@+id/cmd_selection_remove_all"
        android:title="@string/selection_remove_menu_title"
        android:visible="true"
        android:orderInCategory="70"
        android:showAsAction="never" />

    <item android:id="@+id/action_details" android:title="@string/details_menu_title"
        android:orderInCategory="900" android:showAsAction="never" />

    <item android:id="@+id/cmd_more"
        android:title="@string/more_menu_title"
        android:visible="true"
        android:orderInCategory="32700"
        android:showAsAction="never" />
</menu>
