<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (c) 2015-2017 by k3b.
 *
 * This file is part of AndroFotoFinder / #APhotoManager.
 *
 * This program is free software: you can redistribute it and/or modify it
 * under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 * FOR A PARTICULAR PURPOSE. See the GNU General Public License
 * for more details.
 *
 * You should have received a copy of the GNU General Public License along with
 * this program. If not, see <http://www.gnu.org/licenses/>
 */
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.k3b.android.androFotoFinder.locationmap.MapGeoPickerActivity">
    <item android:id="@+id/cmd_filter"
        android:title="@string/filter_menu_title"
        android:icon="@android:drawable/ic_menu_search"
        android:visible="true"
        android:orderInCategory="10"
        android:showAsAction="never" />
		
    <item android:id="@+id/cmd_photo" android:title="@string/show_photo"
        android:orderInCategory="50" android:showAsAction="never" android:visible="true" />
    <item android:id="@+id/cmd_gallery" android:title="@string/show_in_gallery_menu_title"
        android:orderInCategory="50" android:showAsAction="never" android:visible="true" />
		
    <item android:id="@+id/cmd_settings" android:title="@string/settings_title"
        android:orderInCategory="500" android:showAsAction="never" android:visible="true" />

    <item android:id="@+id/cmd_about"
        android:title="@string/about_summary"
        android:visible="true"
        android:orderInCategory="10000"
        android:showAsAction="never" />
</menu>
