<?xml version="1.0" encoding="utf-8"?><!--
/*
 * Copyright (c) 2020-2021 by k3b.
 *
 * This file is part of AndroFotoFinder / #APhotoManager.
 *
 * This program is free software: you can redistribute it and/or modify it
 * under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 * FOR A PARTICULAR PURPOSE. See the GNU General Public License
 * for more details.
 *
 * You should have received a copy of the GNU General Public License along with
 * this program. If not, see <http://www.gnu.org/licenses/>
 */

 Gallery menu-items addon for android 10 and later (with android-10 specific menue items)
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/cmd_database"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/database_menu_title"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/cmd_scan"
                android:orderInCategory="110"
                android:showAsAction="never"
                android:title="@string/scanner_menu_title"
                android:visible="true" />

            <item
                android:id="@+id/cmd_db_recreate"
                android:orderInCategory="9900"
                android:showAsAction="never"
                android:title="@string/load_db_menu_title"
                android:visible="true" />

            <item
                android:id="@+id/cmd_db_update"
                android:orderInCategory="9900"
                android:showAsAction="never"
                android:title="@string/update_db_menu_title"
                android:visible="true" />

            <item
                android:id="@+id/cmd_db_backup"
                android:orderInCategory="9900"
                android:showAsAction="never"
                android:title="@string/backup_db_menu_title"
                android:visible="true" />

        </menu>
    </item>
</menu>