<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (c) 2017 by k3b.
 *
 * This file is part of AndroFotoFinder / #APhotoManager.
 *
 * This program is free software: you can redistribute it and/or modify it
 * under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 * FOR A PARTICULAR PURPOSE. See the GNU General Public License
 * for more details.
 *
 * You should have received a copy of the GNU General Public License along with
 * this program. If not, see <http://www.gnu.org/licenses/>
 */
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/cmd_tags_add"
        android:title="@string/tags_add_menu_title"
        android:visible="true"
        android:orderInCategory="10"
        android:showAsAction="never" />
    <item
        android:id="@+id/menu_item_rename"
        android:showAsAction="never"
        android:title="@string/rename_menu_title"
        android:orderInCategory="10" />
    <item android:id="@id/cmd_delete"
        android:title="@string/delete_menu_title"
        android:visible="true"
        android:orderInCategory="10"
        android:showAsAction="never" />
    <item android:id="@android:id/cut"
        android:title="@android:string/cut"
        android:visible="true"
        android:orderInCategory="15"
        android:showAsAction="never" />
    <item android:id="@android:id/copy"
        android:title="@android:string/copy"
        android:visible="true"
        android:orderInCategory="15"
        android:showAsAction="never" />
    <item android:id="@android:id/paste"
        android:title="@android:string/paste"
        android:visible="true"
        android:orderInCategory="15"
        android:showAsAction="never" />
    <item android:id="@+id/cmd_photo" android:title="@string/show_photo"
        android:orderInCategory="100" android:showAsAction="never" android:visible="true" />
    <item android:id="@+id/cmd_gallery" android:title="@string/show_in_gallery_menu_title"
        android:orderInCategory="100" android:showAsAction="never" android:visible="true" />
</menu>