<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (c) 2015 by k3b.
 *
 * This file is part of AndroFotoFinder.
 *
 * This program is free software: you can redistribute it and/or modify it
 * under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 * FOR A PARTICULAR PURPOSE. See the GNU General Public License
 * for more details.
 *
 * You should have received a copy of the GNU General Public License along with
 * this program. If not, see <http://www.gnu.org/licenses/>
 */
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.k3b.android.androFotoFinder.locationmap.MapGeoPickerActivity">
    <item android:id="@+id/cmd_photo" android:title="@string/show_photo"
        android:orderInCategory="100" android:showAsAction="never" android:visible="true" />
    <item android:id="@+id/cmd_gallery" android:title="@string/show_in_gallery_menu_title"
        android:orderInCategory="100" android:showAsAction="never" android:visible="true" />
    <item android:id="@+id/cmd_zoom" android:title="@string/zoom_to_fit_menu_title"
        android:orderInCategory="100" android:showAsAction="never" android:visible="true" />
    <item android:id="@+id/cmd_show_geo_as"
        android:title="@string/geo_show_as_menu_title"
        android:visible="true"
        android:orderInCategory="200"
        android:showAsAction="never" />

</menu>
