<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright (c) 2015 by k3b.
 *
 * This file is part of AndroFotoFinder.
 *
 * This program is free software: you can redistribute it and/or modify it
 * under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 * FOR A PARTICULAR PURPOSE. See the GNU General Public License
 * for more details.
 *
 * You should have received a copy of the GNU General Public License along with
 * this program. If not, see <http://www.gnu.org/licenses/>
 */
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GalleryFilterActivity">

    <item android:id="@+id/action_save_as" android:title="@string/bookmark_save_as_menu_title"
        android:orderInCategory="10" android:showAsAction="never" android:visible="true" />
		
    <item android:id="@+id/action_edit" android:title="@string/edit_menu_title"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="20" android:showAsAction="never" />

	<item
        android:id="@+id/menu_item_rename"
        android:showAsAction="never"
        android:title="@string/rename_menu_title"
        android:orderInCategory="30" />
		
    <item android:id="@+id/cmd_delete"
        android:title="@string/delete_menu_title"
        android:icon="@android:drawable/ic_menu_delete"
        android:visible="true"
        android:orderInCategory="40"
        android:showAsAction="never" />

</menu>
